sm8150-common: overlay: SystemUI: enable config_vibrateOnIconAnimation
Signed-off-by: Vaisakh Murali <vaisakhmurali@gmail.com>

--- a/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
+++ b/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
@@ -30,4 +30,8 @@
     <!-- Color of the FOD view -->
     <color name="config_fodColorBackground">#00000000</color>
     <color name="config_fodColor">#ccccac</color>
+
+    <!-- Should we vibrate on an icon animation of the shelf. This should only be active if the
+     vibrator is capable of subtle vibrations -->
+    <bool name="config_vibrateOnIconAnimation">true</bool>
 </resources>
