--- a/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
+++ b/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
@@ -29,4 +29,5 @@
 
     <!-- Color of the FOD view -->
     <color name="config_fodColorBackground">#00000000</color>
+    <color name="config_fodColor">#ccccac</color>
 </resources>
