--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -483,4 +483,8 @@
 
     <!-- Device specific doze package -->
     <string name="config_customDozePackage">org.lineageos.settings.doze/org.lineageos.settings.doze.DozeSettingsActivity</string>
+
+    <!-- Allow the gesture power + volume up to change the ringer mode while the device
+          is interactive. -->
+    <bool name="config_volumeHushGestureEnabled">false</bool>
 </resources>
