sm8150-common: Hide FOD while going to sleep
Change-Id: I862a4519737680daabebc6690169c3f4f52901c0
Signed-off-by: Vaisakh Murali <vaisakhmurali@gmail.com>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -487,4 +487,8 @@
     <!-- Allow the gesture power + volume up to change the ringer mode while the device
           is interactive. -->
     <bool name="config_volumeHushGestureEnabled">false</bool>
+
+    <!-- Hide FOD while Going to sleep from lockscreen to avoid HBM flicker
+	 or FOD Circle hiding after the screen is put to sleep -->
+    <bool name="config_hideFodCircleGoingToSleep">true</bool>
 </resources>
