sm8150-common: overlay: Enable OEM fast charge
Change-Id: I56e5c6591b7e4c7b676227a1786efd25019567f9
Signed-off-by: Vaisakh Murali <vaisakhmurali@gmail.com>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -491,4 +491,7 @@
     <!-- Hide FOD while Going to sleep from lockscreen to avoid HBM flicker
 	 or FOD Circle hiding after the screen is put to sleep -->
     <bool name="config_hideFodCircleGoingToSleep">true</bool>
+
+    <!-- OEM charger path node-->
+    <string name="config_oemFastChargerStatusPath" translatable="false">/sys/class/power_supply/battery/fastchg_status</string>
 </resources>
